--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,171 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+	font-family: 'Raleway', sans-serif;
+}
+
+.raleway{
+  font-family: 'Raleway', sans-serif;
+}
+.navbar-bg{
+	color:white;
+	background-color: #5313ba;
+}
+
+.byYear{
+  color: #5313ba;
+  padding: none;
+  border:none;
+  font-size: 2em;
+  margin-bottom: 2px;
+}
+
+.nav-item{
+	height: 100%;
+}
+
+.nav-item a{
+	color:white;
+	font-weight: bold;
+}
+
+.nav-item:hover{
+	background-color: #431889;
+}
+
+.h1-carr{
+	color:white;
+	background-color: #5313ba;
+	font-weight: bolder;
+}
+
+.purple{
+	color:#5313ba;
+	border-bottom: 1px solid #5313ba;
+}
+
+.top30{
+	margin-top: 25px;
+}
+
+.pelititle{
+  color:white;
+  background-color: #5313ba70;
+  position: absolute;
+  bottom: 10px;
+}
+
+.pelititle h4, .pelititle h5{
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 5px;
+  padding-bottom: 0;
+}
+
+.badge-purple{
+  background-color: #5313ba;
+  font-size: 1.5em;
+  color: white;
+  font-weight: bolder;
+}
+
+.buscarbar{
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid #5313ba;
+}
+
+.main-container{
+  margin-top: 40px;
+  margin-bottom: 150px;
+}
+
+.puntero{
+  cursor: pointer;
+}
+
+
+.div-pic-1{
+  width: 100%;
+  height: 300px;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.pic-titulo{
+  position: absolute;
+  bottom: 0px;
+  left: 10px;
+  padding: 10px;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.div-pic-2{
+  width: 100%;
+  height: 200px;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+
+
+/* Animaciones */
+.animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+.fast {
+  -webkit-animation-duration: 0.3s;
+  animation-duration: 0.3s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.fadeIn {
+  animation-name: fadeIn;
+}
+
+/* Animaciones */
+
+.card-footer{
+  color: white;
+  background-color: indigo;
+}
+.w100{width: 100%}
+
+.btn-outline-prp{
+  color: #5313ba;
+  border:1px solid #5313ba;
+  transition: all 0.5s;
+  background-color: white;
+}
+
+.btn-outline-prp:hover{
+  color: white;
+  background-color: #5313ba;
+}
+
+.navbar-toggler{
+  border-color: white;
+  color: white;
+}
+
+.navbar-toggler-icon{
+  color: white !important;
+}
